# roofer

./: .buildinfo  .bumpversion.toml  .clang-format  .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  AlphaShaper_8cpp.html  AlphaShaper_8cpp__incl.map  AlphaShaper_8cpp__incl.md5  AlphaShaper_8hpp.html  AlphaShaper_8hpp__dep__incl.map  AlphaShaper_8hpp__dep__incl.md5  AlphaShaper_8hpp__incl.map  AlphaShaper_8hpp__incl.md5  AlphaShaper_8hpp_source.html  ArrangementBase_8cpp.html  ArrangementBase_8cpp__incl.map  ArrangementBase_8cpp__incl.md5  ArrangementBase_8hpp.html  ArrangementBase_8hpp__dep__incl.map  ArrangementBase_8hpp__dep__incl.md5  ArrangementBase_8hpp__incl.map  ArrangementBase_8hpp__incl.md5  ArrangementBase_8hpp_source.html  ArrangementBuilder_8cpp.html  ArrangementBuilder_8cpp__incl.map  ArrangementBuilder_8cpp__incl.md5  ArrangementBuilder_8hpp.html  ArrangementBuilder_8hpp__dep__incl.map  ArrangementBuilder_8hpp__dep__incl.md5  ArrangementBuilder_8hpp__incl.map  ArrangementBuilder_8hpp__incl.md5  ArrangementBuilder_8hpp_source.html  ArrangementDissolver_8cpp.html  ArrangementDissolver_8cpp__incl.map  ArrangementDissolver_8cpp__incl.md5  ArrangementDissolver_8hpp.html  (+1683 more)
apps/: CMakeLists.txt  crop.cpp  example.toml  ransac_demo.cpp  reconstruct.cpp  reconstruct_api.cpp
apps/cmake-git-version-tracking/: README.md  git.h  git_watcher.cmake
apps/crop/: CMakeLists.txt  crop.cpp
apps/reconstruct/: CMakeLists.txt  reconstruct.cpp
apps/reconstruct_api/: CMakeLists.txt  reconstruct_api.cpp
apps/roofer-app/: BuildingFeature.hpp  BuildingFeatureSerializer.cpp  BuildingFeatureSerializer.hpp  BuildingTileSerializer.cpp  BuildingTileSerializer.hpp  CMakeLists.txt  allocators.hpp  config.hpp  crop_tile.hpp  doc-helper.cpp  example_full.toml  parameter.hpp  reconstruct_building.hpp  rerun-utils.hpp  roofer-app-scratch.cpp  roofer-app.cpp  test_integration.cpp  types.hpp  validators.hpp  version.hpp
experiments/clang-tools/: .pre-commit-config.yaml  CMakeLists.txt  README.md
experiments/clang-tools/cmake/: Tools.cmake
experiments/compiler-warnings/: CMakeLists.txt
experiments/compiler-warnings/src/: CMakeLists.txt
experiments/docs-doxygen/: CMakeLists.txt  README.md
experiments/docs-doxygen/docs/: Doxyfile
experiments/logger/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
experiments/logger/app/: CMakeLists.txt  main.cpp
experiments/logger/configured/: config.hpp.in
experiments/logger/src/: CMakeLists.txt
experiments/parallel-reconstruct/: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile  vcpkg.json
experiments/parallel-reconstruct/app/: CMakeLists.txt
experiments/parallel-reconstruct/configured/: config.hpp.in
experiments/parallel-reconstruct/src/: CMakeLists.txt
experiments/parallel-reconstruct/tests/: CMakeLists.txt  test_async.cpp  test_async_coro.cpp  test_crop.cpp  test_parallel_reconstruct.cpp  test_reconstruct.cpp  test_sequential.cpp  test_sequential_coro.cpp  test_streaming.cpp
experiments/parallel-reconstruct/tools/: plot_traces.py
experiments/tests-catch2/: CMakeLists.txt  Makefile  README.md
experiments/tests-catch2/tests/: CMakeLists.txt  main.cpp
roofer-fcb-ffi/: Cargo.toml
roofer-fcb-ffi/src/: lib.rs
rooferpy/: CMakeLists.txt  README.md  example_rooferpy.py  rooferpy.cpp
roofersharp/cpp/: CMakeLists.txt  roofer_wrapper.cpp  roofer_wrapper.h
src/core/common/: CGALPIPTester.cpp  CMakeLists.txt  GridPIPTester.cpp  Raster.cpp  common.cpp  pip_util.cpp  ptinpoly.c
src/core/logger/: CMakeLists.txt  logger.cpp  logger_spdlog.cpp
src/core/reconstruction/: AlphaShaper.cpp  ArrangementBase.cpp  ArrangementBuilder.cpp  ArrangementBuilder.hpp  ArrangementDissolver.cpp  ArrangementDissolver.hpp  ArrangementExtruder.cpp  ArrangementOptimiser.cpp  ArrangementSnapper.cpp  ArrangementSnapper.hpp  CMakeLists.txt  ElevationProvider.cpp  LineDetector.cpp  LineDetectorBase.cpp  LineDetectorBase.h  LineRegulariser.cpp  LineRegulariserBase.cpp  MeshTriangulator.hpp  MeshTriangulatorLegacy.cpp  PlaneDetector.cpp  PlaneDetectorBase.hpp  PlaneDetectorRANSAC.cpp  PlaneIntersector.cpp  PlaneIntersector.hpp  RegionGrower_DS_CGAL.hpp  SegmentRasteriser.cpp  SegmentRasteriser.hpp  SimplePolygonExtruder.cpp  cdt_util.cpp  cdt_util.hpp
src/datastructures/: CMakeLists.txt  Raster.cpp  Raster.hpp
src/extra/io/: CMakeLists.txt  CityJsonWriter.cpp  CityJsonWriter.hpp  FcbWriter.cpp  PointCloudReader.hpp  PointCloudReaderLASlib.cpp  PointCloudWriter.hpp  PointCloudWriterLASlib.cpp  RasterWriterGDAL.cpp  SpatialReferenceSystemOGR.cpp  StreamCropper.cpp  VectorReader.hpp  VectorReaderOGR.cpp  (+2 more)
src/io/: CMakeLists.txt  CityJsonWriter.cpp  CityJsonWriter.hpp  PointCloudReader.hpp  PointCloudReaderLASlib.cpp  PointCloudWriter.hpp  PointCloudWriterLASlib.cpp  RasterWriter.hpp  RasterWriterGDAL.cpp  StreamCropper.cpp  StreamCropper.hpp  VectorReader.hpp  VectorReaderOGR.cpp  VectorWriter.hpp  VectorWriterOGR.cpp
src/misc/: CMakeLists.txt  NodataCircleComputer.cpp  NodataCircleComputer.hpp  PC2MeshDistCalculator.cpp  PC2MeshDistCalculator.hpp  PointcloudRasteriser.cpp  PointcloudRasteriser.hpp  Val3dator.cpp  Val3dator.hpp  Vector2DOps.hpp  Vector2DOpsGEOS.cpp  pip_util.cpp  pip_util.hpp  projHelper.cpp  projHelper.hpp  select_pointcloud.cpp  select_pointcloud.hpp
tests/: CMakeLists.txt  README.md  reconstruct_api.cpp  test_logger.cpp  test_reconstruct_api.cpp  test_vector_reader.cpp
tests/config/: README.md  crop-roi.toml  crop-wippolder.toml  issue-64.toml  issue-71-full.toml  issue-71-v1.toml  issue-71-v2.toml  pc-fusion-all-ahn.toml  pc-fusion-bag-underground.toml  pc-fusion-sheds-garage.toml  pc-fusion-yoc-2010-ahn.toml  pc-fusion-yoc-2019-completely-new.toml  pc-fusion-yoc-2022-low-coverage.toml  reconstruct-wippolder-invalid.toml  reconstruct-wippolder.toml  roofer-wateringen-large.toml  roofer-wateringen.toml  roofer-wippolder.toml
tests/data/: README.md
tests/fixtures/: issue-134-mixed.geojson
tests/output/: README.md
tests/tools/: test-installed-apps.py  test_apps.py
(+441 files in other folders)
